[gd_scene load_steps=17 format=2]

[ext_resource path="res://Tiles.tres" type="TileSet" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://TextBox/tutorial2msg.gd" type="Script" id=3]
[ext_resource path="res://Levels/Level/Level1msg2.gd" type="Script" id=4]
[ext_resource path="res://Levels/Level/Level1.gd" type="Script" id=5]
[ext_resource path="res://Resources/ExitLevel.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Levels/Level/Level1Exit.gd" type="Script" id=7]
[ext_resource path="res://Resources/Spikes/PokingSpikes.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 22 )

[sub_resource type="GDScript" id=108]
script/source = "extends Area2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _on_Death_body_entered(body):
	if body is MainCharacter:
		get_tree().reload_current_scene()
"

[sub_resource type="RectangleShape2D" id=107]
extents = Vector2( 36, 10 )

[sub_resource type="GDScript" id=109]
script/source = "extends Area2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _on_Death_body_entered(body):
	if body is MainCharacter:
		get_tree().reload_current_scene()
"

[sub_resource type="RectangleShape2D" id=102]
extents = Vector2( 94.875, 10 )

[sub_resource type="RectangleShape2D" id=110]

[sub_resource type="RectangleShape2D" id=111]

[sub_resource type="RectangleShape2D" id=112]
extents = Vector2( 10, 15.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
format = 1
tile_data = PoolIntArray( -2228106, 165, 0, -2162570, 165, 0, -2097034, 165, 0, -2031498, 165, 0, -1965962, 165, 0, -1900426, 165, 0, -1834890, 165, 0, -1769354, 165, 0, -1703818, 165, 0, -1638282, 165, 0, -1572833, 120, 0, -1572832, 120, 0, -1572831, 120, 0, -1572830, 120, 0, -1572829, 120, 0, -1572828, 120, 0, -1572827, 120, 0, -1572826, 120, 0, -1572825, 120, 0, -1572824, 120, 0, -1572823, 120, 0, -1572822, 120, 0, -1572821, 120, 0, -1572820, 120, 0, -1572819, 120, 0, -1572818, 120, 0, -1572817, 120, 0, -1572816, 120, 0, -1572815, 120, 0, -1572814, 120, 0, -1572813, 120, 0, -1572812, 120, 0, -1572811, 120, 0, -1572810, 120, 0, -1572809, 120, 0, -1572746, 165, 0, -1507297, 120, 0, -1507273, 120, 0, -1507210, 165, 0, -1441761, 120, 0, -1441737, 120, 0, -1441674, 165, 0, -1376225, 120, 0, -1376216, 170, 0, -1376213, 170, 0, -1376212, 170, 0, -1376211, 170, 0, -1376210, 170, 0, -1376209, 170, 0, -1376208, 170, 0, -1376207, 170, 0, -1376206, 170, 0, -1376201, 120, 0, -1376138, 165, 0, -1245185, 162, 0, -1310689, 120, 0, -1310680, 170, 0, -1310679, 170, 0, -1310677, 170, 0, -1310676, 170, 0, -1310675, 170, 0, -1310674, 170, 0, -1310673, 170, 0, -1310672, 170, 0, -1310671, 170, 0, -1310670, 170, 0, -1310665, 120, 0, -1310602, 165, 0, -1179649, 162, 0, -1245153, 120, 0, -1245152, 170, 0, -1245151, 170, 0, -1245144, 170, 0, -1245143, 170, 0, -1245142, 170, 0, -1245141, 170, 0, -1245140, 170, 0, -1245139, 170, 0, -1245138, 170, 0, -1245137, 170, 0, -1245136, 170, 0, -1245135, 170, 0, -1245134, 170, 0, -1245129, 120, 0, -1245066, 165, 0, -1114113, 162, 0, -1179617, 120, 0, -1179608, 170, 0, -1179607, 170, 0, -1179606, 170, 0, -1179605, 170, 0, -1179604, 170, 0, -1179603, 170, 0, -1179602, 170, 0, -1179601, 170, 0, -1179600, 170, 0, -1179599, 170, 0, -1179598, 170, 0, -1179593, 120, 0, -1179530, 165, 0, -1048577, 162, 0, -1114081, 120, 0, -1114073, 170, 0, -1114072, 170, 0, -1114071, 170, 0, -1114070, 170, 0, -1114069, 170, 0, -1114068, 170, 0, -1114067, 170, 0, -1114066, 170, 0, -1114065, 170, 0, -1114064, 170, 0, -1114063, 170, 0, -1114062, 170, 0, -1114057, 120, 0, -1113994, 165, 0, -983041, 162, 0, -1048545, 120, 0, -1048542, 170, 0, -1048541, 170, 0, -1048540, 170, 0, -1048539, 170, 0, -1048538, 170, 0, -1048537, 170, 0, -1048536, 170, 0, -1048535, 170, 0, -1048534, 170, 0, -1048533, 170, 0, -1048532, 170, 0, -1048531, 170, 0, -1048530, 170, 0, -1048529, 170, 0, -1048528, 170, 0, -1048527, 170, 0, -1048526, 170, 0, -1048521, 120, 0, -1048458, 165, 0, -917505, 162, 0, -983009, 120, 0, -983006, 170, 0, -983005, 170, 0, -983004, 170, 0, -983003, 170, 0, -982985, 120, 0, -982922, 165, 0, -851969, 162, 0, -917479, 120, 0, -917478, 120, 0, -917477, 120, 0, -917476, 120, 0, -917475, 120, 0, -917474, 120, 0, -917473, 120, 0, -917470, 170, 0, -917469, 170, 0, -917468, 170, 0, -917467, 170, 0, -917449, 120, 0, -917448, 120, 0, -917447, 120, 0, -917446, 120, 0, -917445, 120, 0, -917444, 120, 0, -917443, 120, 0, -917442, 120, 0, -917441, 120, 0, -917440, 120, 0, -917439, 120, 0, -917438, 120, 0, -917437, 120, 0, -917436, 120, 0, -917386, 165, 0, -786433, 162, 0, -851943, 120, 0, -851934, 170, 0, -851933, 170, 0, -851932, 170, 0, -851931, 170, 0, -851900, 120, 0, -851850, 165, 0, -720897, 162, 0, -786407, 120, 0, -786364, 120, 0, -786314, 165, 0, -655361, 162, 0, -720871, 120, 0, -720865, 160, 0, -720864, 120, 0, -720863, 120, 0, -720862, 164, 0, -720861, 170, 0, -720860, 170, 0, -720859, 170, 0, -720858, 170, 0, -720857, 170, 0, -720856, 170, 0, -720855, 170, 0, -720854, 170, 0, -720853, 170, 0, -720852, 170, 0, -720851, 170, 0, -720850, 170, 0, -720849, 170, 0, -720848, 170, 0, -720847, 170, 0, -720846, 170, 0, -720828, 120, 0, -720778, 165, 0, -589825, 162, 0, -655360, 120, 0, -655359, 120, 0, -655358, 120, 0, -655357, 120, 0, -655356, 120, 0, -655355, 120, 0, -655354, 120, 0, -655353, 120, 0, -655352, 120, 0, -655351, 120, 0, -655350, 120, 0, -655349, 120, 0, -655348, 120, 0, -655347, 120, 0, -655346, 120, 0, -655345, 120, 0, -655344, 120, 0, -655343, 120, 0, -655342, 120, 0, -655341, 120, 0, -655340, 120, 0, -655339, 120, 0, -655338, 120, 0, -655337, 120, 0, -655336, 120, 0, -655335, 120, 0, -655334, 159, 0, -655326, 165, 0, -655292, 120, 0, -655242, 165, 0, -524289, 162, 0, -589790, 165, 0, -589756, 120, 0, -589721, 120, 0, -589720, 120, 0, -589719, 120, 0, -589718, 120, 0, -589717, 120, 0, -589716, 120, 0, -589715, 120, 0, -589714, 120, 0, -589713, 120, 0, -589712, 120, 0, -589711, 120, 0, -589710, 120, 0, -589709, 120, 0, -589708, 120, 0, -589707, 120, 0, -589706, 165, 0, -458753, 162, 0, -524254, 165, 0, -524220, 120, 0, -524185, 120, 0, -524170, 165, 0, -393217, 162, 0, -458725, 122, 0, -458724, 122, 0, -458723, 122, 0, -458722, 122, 0, -458718, 165, 0, -458684, 120, 0, -458655, 120, 0, -458654, 120, 0, -458653, 120, 0, -458652, 120, 0, -458651, 120, 0, -458650, 120, 0, -458649, 120, 0, -458634, 165, 0, -327681, 162, 0, -393182, 165, 0, -393148, 120, 0, -393147, 120, 0, -393146, 120, 0, -393145, 120, 0, -393144, 120, 0, -393143, 120, 0, -393142, 120, 0, -393141, 120, 0, -393140, 120, 0, -393139, 120, 0, -393138, 120, 0, -393137, 120, 0, -393136, 120, 0, -393135, 120, 0, -393134, 120, 0, -393133, 120, 0, -393132, 120, 0, -393131, 120, 0, -393130, 120, 0, -393129, 120, 0, -393128, 120, 0, -393127, 120, 0, -393126, 120, 0, -393125, 120, 0, -393124, 120, 0, -393123, 120, 0, -393122, 120, 0, -393121, 120, 0, -393120, 120, 0, -393119, 120, 0, -393098, 165, 0, -262145, 162, 0, -327631, 164, 0, -327630, 170, 0, -327629, 170, 0, -327628, 170, 0, -327627, 170, 0, -327626, 170, 0, -327625, 170, 0, -327624, 170, 0, -327623, 170, 0, -327622, 170, 0, -327621, 161, 0, -327562, 165, 0, -196609, 162, 0, -262115, 170, 0, -262114, 170, 0, -262113, 170, 0, -262112, 170, 0, -262095, 165, 0, -262085, 162, 0, -262026, 165, 0, -131073, 162, 0, -196559, 165, 0, -196549, 162, 0, -196531, 120, 0, -196530, 120, 0, -196529, 120, 0, -196528, 120, 0, -196516, 120, 0, -196515, 120, 0, -196514, 120, 0, -196513, 120, 0, -196490, 165, 0, -65537, 162, 0, -131047, 123, 0, -131046, 123, 0, -131023, 165, 0, -131013, 162, 0, -131004, 120, 0, -131003, 120, 0, -131002, 120, 0, -131001, 120, 0, -131000, 120, 0, -130999, 120, 0, -130989, 120, 0, -130988, 120, 0, -130987, 120, 0, -130986, 120, 0, -130985, 120, 0, -130984, 120, 0, -130954, 165, 0, -1, 162, 0, -65512, 121, 0, -65511, 122, 0, -65510, 122, 0, -65509, 124, 0, -65487, 165, 0, -65477, 162, 0, -65418, 165, 0, 65535, 163, 0, 0, 170, 0, 1, 170, 0, 2, 170, 0, 3, 170, 0, 4, 170, 0, 5, 170, 0, 6, 170, 0, 7, 170, 0, 8, 170, 0, 9, 170, 0, 10, 161, 0, 20, 164, 0, 21, 170, 0, 22, 170, 0, 23, 170, 0, 24, 170, 0, 25, 170, 0, 26, 170, 0, 27, 170, 0, 28, 170, 0, 29, 170, 0, 30, 170, 0, 31, 170, 0, 32, 170, 0, 33, 170, 0, 34, 170, 0, 35, 170, 0, 36, 170, 0, 37, 170, 0, 38, 170, 0, 39, 170, 0, 40, 170, 0, 41, 170, 0, 42, 170, 0, 43, 170, 0, 44, 170, 0, 45, 170, 0, 46, 170, 0, 47, 170, 0, 48, 170, 0, 49, 166, 0, 59, 163, 0, 60, 170, 0, 61, 170, 0, 62, 170, 0, 63, 170, 0, 64, 170, 0, 65, 170, 0, 66, 170, 0, 67, 170, 0, 68, 170, 0, 69, 170, 0, 70, 170, 0, 71, 170, 0, 72, 170, 0, 73, 170, 0, 74, 170, 0, 75, 170, 0, 76, 170, 0, 77, 170, 0, 78, 170, 0, 79, 170, 0, 80, 170, 0, 81, 170, 0, 82, 170, 0, 83, 170, 0, 84, 170, 0, 85, 170, 0, 86, 170, 0, 87, 170, 0, 88, 170, 0, 89, 170, 0, 90, 170, 0, 91, 170, 0, 92, 170, 0, 93, 170, 0, 94, 170, 0, 95, 170, 0, 96, 170, 0, 97, 170, 0, 98, 170, 0, 99, 170, 0, 100, 170, 0, 101, 170, 0, 102, 170, 0, 103, 170, 0, 104, 170, 0, 105, 170, 0, 106, 170, 0, 107, 170, 0, 108, 170, 0, 109, 170, 0, 110, 170, 0, 111, 170, 0, 112, 170, 0, 113, 170, 0, 114, 170, 0, 115, 170, 0, 116, 170, 0, 117, 170, 0, 118, 166, 0, 65546, 162, 0, 65556, 165, 0, 131082, 162, 0, 131092, 165, 0, 196618, 162, 0, 196628, 165, 0, 262154, 162, 0, 262164, 165, 0, 327690, 162, 0, 327700, 165, 0, 393226, 162, 0, 393236, 165, 0, 458762, 162, 0, 458772, 165, 0, 524298, 162, 0, 524308, 165, 0, 589834, 162, 0, 589844, 165, 0, 655370, 162, 0, 655380, 165, 0, 720906, 162, 0, 720916, 165, 0, 786442, 162, 0, 786452, 165, 0, 851978, 162, 0, 851988, 165, 0, 917514, 162, 0, 917524, 165, 0, 983050, 162, 0, 983060, 165, 0, 1048586, 162, 0, 1048596, 165, 0, 1114122, 162, 0, 1114132, 165, 0, 1179658, 162, 0, 1179668, 165, 0, 1245194, 162, 0, 1245204, 165, 0, 1310730, 162, 0, 1310740, 165, 0, 1376266, 162, 0, 1376276, 165, 0, 1441802, 162, 0, 1441812, 165, 0, 1507338, 162, 0, 1507348, 165, 0, 1572874, 162, 0, 1572884, 165, 0, 1638410, 162, 0, 1638420, 165, 0, 1703946, 162, 0, 1703956, 165, 0, 1769482, 162, 0, 1769492, 165, 0, 1835018, 162, 0, 1835028, 165, 0, 1900554, 162, 0, 1900564, 165, 0, 1966090, 162, 0, 1966100, 165, 0, 2555922, 112, 0, 2555924, 112, 0, 2555926, 112, 0, 2555928, 112, 0, 2555930, 112, 0, 2555932, 112, 0, 2555934, 112, 0, 2555936, 112, 0, 2555938, 112, 0, 2555963, 112, 0, 2555965, 112, 0, 2555967, 112, 0, 2555969, 112, 0, 2555971, 112, 0, 2555973, 112, 0, 2555975, 112, 0, 2555977, 112, 0, 2555979, 112, 0, 2555981, 112, 0, 2555983, 112, 0, 2555984, 112, 0, 2555986, 112, 0 )

[node name="Level1msg1" type="Area2D" parent="."]
position = Vector2( 59, 290 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1msg1"]
shape = SubResource( 1 )

[node name="Level1msg2" type="Area2D" parent="."]
position = Vector2( 271, 290 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1msg2"]
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 176, -170 )

[node name="Death" type="Area2D" parent="."]
position = Vector2( 88, 337 )
script = SubResource( 108 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2( 24, 0 )
shape = SubResource( 107 )

[node name="Death2" type="Area2D" parent="."]
position = Vector2( 329, 338 )
script = SubResource( 109 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death2"]
position = Vector2( 51.125, 0 )
shape = SubResource( 102 )

[node name="Checkpoint_0" type="Area2D" parent="."]
position = Vector2( 16, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint_0"]
shape = SubResource( 110 )

[node name="Checkpoint_1" type="Area2D" parent="."]
position = Vector2( 510, 292 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint_1"]
shape = SubResource( 111 )

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 1872, -19 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Exit"]
position = Vector2( 0, 2 )
frames = ExtResource( 6 )
animation = "New Anim"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( 0, 3.5 )
shape = SubResource( 112 )

[node name="PokingSpike" parent="." instance=ExtResource( 12 )]
position = Vector2( 32, 312 )

[connection signal="body_entered" from="Level1msg1" to="Level1msg1" method="_on_tutorial2msg_body_entered"]
[connection signal="body_entered" from="Level1msg2" to="Level1msg2" method="_on_tutorial2msg_body_entered"]
[connection signal="body_entered" from="Death" to="Death" method="_on_Death_body_entered"]
[connection signal="body_entered" from="Death2" to="Death2" method="_on_Death_body_entered"]
[connection signal="body_entered" from="Checkpoint_0" to="." method="_on_Checkpoint_0_body_entered"]
[connection signal="body_entered" from="Checkpoint_1" to="." method="_on_Checkpoint_1_body_entered"]
[connection signal="Checkpoint_finished" from="Exit" to="." method="_on_Exit_Checkpoint_finished"]
[connection signal="body_entered" from="Exit" to="Exit" method="_on_Exit_body_entered"]
